# GRAFT-GS

./: .gitignore  IMPLEMENTATION_LEDGER.md  README.md  VALIDATION_LEDGER.md  git.md  pyproject.toml  requirements.txt
configs/: graft_gs_a800_native.yaml
data_manifests/: meshfleet_local_audit.jsonl  meshfleet_local_audit.jsonl.summary.json  meshfleet_object_ids.txt
docs/: A800_VALIDATION_PROTOCOL.md  DATASET_AUDIT.md  DEVIATIONS_FROM_SPEC.md  MATHEMATICAL_ASSUMPTIONS.md  REPOSITORY_AUDIT.md  RESEARCH_DECISIONS.md  SPECIFICATION_TRACEABILITY.md  UNRESOLVED_BLOCKERS.md
graft_gs/: __init__.py
graft_gs/data/: __init__.py  (+3 more)
outputs/: dynamic_local_manifest.jsonl  dynamic_local_manifest.jsonl.summary.json
scripts/: build_meshfleet_manifest.py  evaluate_meshfleet.py  infer_meshfleet.py  infer_multiview.py  launch_a800_6gpu.sh  overfit_meshfleet_object.py  overfit_one_object.py  refine_teacher_bundle.py  reproduce_baseline.py  run_ablations.py  select_a800_view_budget.py  sweep_a800_view_budget.py  train_a800.py  validate_ddp_server.py  validate_environment.py  validate_external_models.py  validate_server.py
tests/: test_assets_and_vertical_slice.py  test_atlas_mapping.py  test_distributed_evidence.py  test_environment_contract_static.py  test_external_adapters.py  test_geometry_invariants.py  test_gradient_purification.py  test_meshfleet_contract.py  test_meshfleet_dynamic_discovery.py  test_meshfleet_manifest_static.py  test_precision_policy.py  test_quantization.py  test_real_multiview.py  test_scientific_trace_static.py  test_server_manifest_handoff_static.py  (+1 more)
(+31 files in other folders)
