[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graft-gs"
version = "0.1.0"
description = "Gauge-Riemannian Atlas Flow Transformer for static 3D Gaussian Splatting"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "torch>=2.4",
  "torchvision>=0.19",
  "pillow>=10",
  "plyfile>=1.0",
  "pygltflib>=1.16",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["graft_gs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["server: requires pretrained checkpoints and an A800-class CUDA device"]
